<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FilterActivity"
    android:background="@color/colorBGwhite">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        app:elevation="0dp"
        android:background="@color/colorBGwhite">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/back"
                    android:paddingEnd="@dimen/margin_medium_1"
                    android:paddingStart="@dimen/margin_small"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/title_apply_filter"
                    style="@style/text_semi_title"
                    android:layout_toEndOf="@id/btnBack"
                    android:gravity="center_vertical"/>
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/margin_xlarge"
            android:paddingBottom="@dimen/height_button"
            android:paddingHorizontal="@dimen/margin_medium_3">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_toy_categories"
                style="@style/text_regular"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cgToyCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                app:chipSpacingHorizontal="@dimen/margin_medium"
                app:singleLine="false"
                app:singleSelection="true">
                
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_exclusive"
                    style="@style/Widget.MaterialComponents.Chip.Choice.toyCategories"/>
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_new_release"
                    style="@style/Widget.MaterialComponents.Chip.Choice.toyCategories"/>
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_limited"
                    style="@style/Widget.MaterialComponents.Chip.Choice.toyCategories"/>
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_popular"
                    style="@style/Widget.MaterialComponents.Chip.Choice.toyCategories"/>
                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_all"
                    style="@style/Widget.MaterialComponents.Chip.Choice.toyCategories"/>
            </com.google.android.material.chip.ChipGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_line"
                android:background="@color/colorGray"
                android:layout_marginVertical="@dimen/margin_large"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_age_categories"
                style="@style/text_regular"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_medium">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvUner3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_medium_3"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/margin_medium_2">
                    <LinearLayout
                        android:layout_width="@dimen/width_age_category"
                        android:layout_height="@dimen/height_age_category"
                        android:orientation="vertical"
                        android:gravity="center">
                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/lblUnder3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/age_under"
                            style="@style/text_extra_light"/>
                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvUnder3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/age_under_03"
                            style="@style/text_semi_title"
                            android:textSize="@dimen/text_age"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cvUner7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_medium_3"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/margin_medium_2">
                    <LinearLayout
                        android:layout_width="@dimen/width_age_category"
                        android:layout_height="@dimen/height_age_category"
                        android:orientation="vertical"
                        android:gravity="center">
                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/lblUnder7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/age_under"
                            style="@style/text_extra_light"/>
                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvUnder7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/age_under_07"
                            style="@style/text_semi_title"
                            android:textSize="@dimen/text_age"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cvUner14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_medium_3"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/margin_medium_2">
                    <LinearLayout
                        android:layout_width="@dimen/width_age_category"
                        android:layout_height="@dimen/height_age_category"
                        android:orientation="vertical"
                        android:gravity="center">
                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/lblUnder14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/age_under"
                            style="@style/text_extra_light"/>
                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvUnder14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/age_under_14"
                            style="@style/text_semi_title"
                            android:textSize="@dimen/text_age"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_line"
                android:background="@color/colorGray"
                android:layout_marginVertical="@dimen/margin_large"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_pricing"
                style="@style/text_regular"/>

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/sbPricing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_medium_3_n"
                android:max="1000"
                android:progress="1"
                android:progressTint="@color/colorSecondary"
                android:thumb="@drawable/seekbar"
                android:layout_marginTop="@dimen/margin_medium"/>



            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbPricing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_average_price"
                style="@style/text_regular"
                android:buttonTint="@color/colorAccentGreen"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:weightSum="2">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnSetDefault"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_set_default"
            android:gravity="center"
            style="@style/text_medium"
            android:background="@color/white"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnApplyFilter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_apply_filter"
            android:gravity="center"
            style="@style/text_medium"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_weight="1"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>