<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailsActivity"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        app:elevation="0dp"
        android:background="@color/white">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/back"
                    android:paddingEnd="@dimen/margin_medium_1"
                    android:paddingStart="@dimen/margin_small"/>

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/text_semi_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/btnBack"
                    android:gravity="center_vertical"
                    android:text="@string/title_details" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/margin_xlarge">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/btnLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardElevation="@dimen/margin_large"
                    app:cardCornerRadius="@dimen/margin_medium_2"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/margin_medium_3">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/height_forward"
                        android:layout_height="@dimen/height_forward"
                        android:src="@drawable/arrow_left"
                        android:padding="@dimen/margin_medium_1"
                        android:background="@color/white"/>
                </androidx.cardview.widget.CardView>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivToy"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_details_image"
                    android:layout_toStartOf="@id/btnRight"
                    android:layout_toEndOf="@id/btnLeft"
                    android:src="@drawable/mask_group_4"
                    android:layout_marginHorizontal="@dimen/margin_medium_3"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btnRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardElevation="@dimen/margin_large"
                    app:cardCornerRadius="@dimen/margin_medium_2"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/margin_medium_3">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/height_forward"
                        android:layout_height="@dimen/height_forward"
                        android:src="@drawable/arrow_right"
                        android:padding="@dimen/margin_medium_1"
                        android:background="@color/white"/>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/group59"
                android:layout_marginVertical="@dimen/margin_medium_3"
                android:layout_gravity="center_horizontal"/>

            <include
                android:id="@+id/vpDetails"
                layout="@layout/viewpod_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:weightSum="2">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnAddToCart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_add_cart"
            android:gravity="center"
            style="@style/text_medium"
            android:background="@color/white"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnSwap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_swap"
            android:gravity="center"
            style="@style/text_medium"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_weight="1"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>