<?xml version="1.0" encoding="utf-8"?>
<com.example.toyu.viewpods.DetailsViewpod xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardElevation="@dimen/margin_large"
    app:cardCornerRadius="@dimen/margin_large">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/margin_medium_3"
        android:paddingBottom="@dimen/height_button"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPrice"
            style="@style/text_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/margin_medium_3"
            android:layout_toStartOf="@id/cvToyType"
            android:paddingVertical="@dimen/margin_medium_1"
            android:text="$75.00" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvToyType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/margin_medium_2"
            android:layout_toStartOf="@id/btnFav"
            android:layout_marginEnd="@dimen/margin_medium_1">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvToyType"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_xlarge"
                android:text="@string/category_limited"
                style="@style/text_medium"
                android:textSize="@dimen/text_small"
                android:paddingHorizontal="@dimen/margin_medium_2"
                android:gravity="center"/>
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/margin_medium_3"
            android:background="@drawable/favorite_unselected" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvToyName"
            style="@style/text_semi_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPrice"
            android:layout_alignStart="@id/tvPrice"
            android:layout_alignEnd="@id/btnFav"
            android:text="Remote Submarine"
            android:textSize="@dimen/text_regular" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/ratingbar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvToyName"
            android:layout_alignStart="@id/tvPrice"
            android:layout_marginTop="@dimen/margin_medium"
            android:numStars="5"
            android:progressTint="@color/colorPrimary"
            android:rating="4.0" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRate"
            style="@style/text_regular"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_medium_3"
            android:layout_alignBottom="@id/ratingbar"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_toEndOf="@id/ratingbar"
            android:text="4.0"
            android:textSize="@dimen/text_regular_2x"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDescription"
            style="@style/text_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ratingbar"
            android:layout_alignStart="@id/tvPrice"
            android:layout_alignEnd="@id/btnFav"
            android:layout_marginTop="@dimen/margin_medium_1"
            android:lineSpacingExtra="@dimen/margin_small"
            android:text="This balancing game encourages your little one to move carefully, think critically and play imaginatively, all while enjoying a fun and interactive game." />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_line"
            android:layout_below="@id/tvDescription"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@color/colorGray"
            android:layout_alignStart="@id/tvPrice"
            android:layout_alignEnd="@id/btnFav" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAvaiColors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_avai_colors"
            style="@style/text_semi_title"
            android:textSize="@dimen/text_regular"
            android:layout_below="@id/view1"
            android:layout_alignStart="@id/tvPrice"
            android:layout_alignEnd="@id/btnFav"
            android:layout_marginTop="@dimen/margin_medium_3"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvToyColors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAvaiColors"
            android:orientation="horizontal"
            android:paddingStart="@dimen/margin_medium_3"/>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_line"
            android:layout_below="@id/rvToyColors"
            android:layout_alignStart="@id/tvPrice"
            android:layout_alignEnd="@id/btnFav"
            android:layout_marginBottom="@dimen/margin_medium_3"
            android:background="@color/colorGray" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivOwner"
            android:layout_width="@dimen/size_owner"
            android:layout_height="@dimen/size_owner"
            android:layout_below="@id/view2"
            android:layout_alignStart="@id/tvPrice"
            android:src="@drawable/mask_group5" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblOwnedBy"
            style="@style/text_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/ivOwner"
            android:layout_marginStart="@dimen/margin_medium_1"
            android:layout_toEndOf="@id/ivOwner"
            android:paddingTop="@dimen/margin_card_medium"
            android:text="@string/lbl_owned_by"
            android:textAllCaps="true"
            android:textSize="@dimen/text_small" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOwner"
            style="@style/text_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblOwnedBy"
            android:layout_alignStart="@id/lblOwnedBy"
            android:layout_alignEnd="@id/btnFav"
            android:layout_alignBottom="@id/ivOwner"
            android:paddingBottom="@dimen/margin_card_medium"
            android:text="Thomas" />






    </RelativeLayout>
</com.example.toyu.viewpods.DetailsViewpod>